src/vendor/gzfast_zlib_shim.h

typedef struct gzfast_inflater gzfast_inflater;
typedef struct gzfast_deflater gzfast_deflater;
/* Create an inflater in raw-DEFLATE mode (negative window bits).
 * Returns NULL on allocation failure. */
GZFAST_SHIM_API gzfast_inflater* gzfast_inflater_create(void);
/* Destroy an inflater. Safe to call with NULL. */
GZFAST_SHIM_API void gzfast_inflater_destroy(gzfast_inflater* state);
/* Full reset: discard all state including any dictionary and history. */
GZFAST_SHIM_API int gzfast_inflater_reset(gzfast_inflater* state);
/* Prime the bit buffer with `bit_count` (0..16) bits taken from the
 * low bits of `bit_value`, for starting inflation at a non-byte-aligned
 * bit offset. Must be called immediately after a reset. */
GZFAST_SHIM_API int gzfast_inflater_prime(
    gzfast_inflater* state,
    unsigned bit_count,
    unsigned bit_value
);
/* Install a 32 KiB (or shorter) history window as the inflate dictionary. */
GZFAST_SHIM_API int gzfast_inflater_set_dictionary(
    gzfast_inflater* state,
    const unsigned char* data,
    size_t length
);
/* Perform one inflate step.
 *
 * On entry, *input / *input_length describe the available compressed
 * bytes and *output / *output_length the available destination space.
 * On return the pointers and lengths are advanced past the consumed
 * input and produced output. `flush_mode` is one of GZFAST_Z_* above.
 *
 * Returns a GZFAST_Z_* status code. */
GZFAST_SHIM_API int gzfast_inflater_step(
    gzfast_inflater* state,
    const unsigned char** input,
    size_t* input_length,
    unsigned char** output,
    size_t* output_length,
    int flush_mode
);
GZFAST_SHIM_API uint64_t gzfast_inflater_total_in(
    const gzfast_inflater* state
);
GZFAST_SHIM_API uint64_t gzfast_inflater_total_out(
    const gzfast_inflater* state
);
/* Raw zlib data_type field: low six bits are unused input bits, bit 6
 * marks the final block, bit 7 a block boundary, and bit 8 completion
 * of a block header under Z_TREES. */
GZFAST_SHIM_API int gzfast_inflater_data_type(
    const gzfast_inflater* state
);
/* CRC32 (gzip polynomial) over `length` bytes, continuing `previous`. */
GZFAST_SHIM_API uint32_t gzfast_crc32(
    uint32_t previous,
    const unsigned char* data,
    size_t length
);
/* Combine two CRC32 values as if computed over concatenated data,
 * where the second segment had `second_length` bytes. */
GZFAST_SHIM_API uint32_t gzfast_crc32_combine(
    uint32_t first,
    uint32_t second,
    uint64_t second_length
);
/* Version of the vendored zlib, for diagnostics. */
GZFAST_SHIM_API const char* gzfast_zlib_version(void);
/* Create a deflater in raw-DEFLATE mode (negative window bits).
 * `level` is zlib's compression level 0..9. `strategy` is zlib's
 * strategy value. Returns NULL on allocation or initialization failure. */
GZFAST_SHIM_API gzfast_deflater* gzfast_deflater_create(
    int level,
    int strategy
);
/* Destroy a deflater. Safe to call with NULL. */
GZFAST_SHIM_API void gzfast_deflater_destroy(gzfast_deflater* state);
/* Perform one deflate step.
 *
 * On entry, *input / *input_length describe the available uncompressed
 * bytes and *output / *output_length the available destination space.
 * On return the pointers and lengths are advanced past the consumed
 * input and produced output. `flush_mode` is one of GZFAST_Z_NO_FLUSH,
 * GZFAST_Z_SYNC_FLUSH, or GZFAST_Z_FINISH.
 *
 * Returns a GZFAST_Z_* status code. */
GZFAST_SHIM_API int gzfast_deflater_step(
    gzfast_deflater* state,
    const unsigned char** input,
    size_t* input_length,
    unsigned char** output,
    size_t* output_length,
    int flush_mode
);
GZFAST_SHIM_API uint64_t gzfast_deflater_total_in(
    const gzfast_deflater* state
);
GZFAST_SHIM_API uint64_t gzfast_deflater_total_out(
    const gzfast_deflater* state
);